--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-flash-message": "^2.1.0",
     "express-session": "^1.17.3",
     "memorystore": "^1.6.7",
+    "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
     "nunjucks": "^3.2.4",
